manifests/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddp-api
  labels:
    app: ddp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddp-api
  template:
    metadata:
      labels:
        app: ddp-api
    spec:
      containers:
      - name: ddp-api
        image: 77373/ddp-api:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8900
        volumeMounts:
        - name: env-config
          mountPath: /build/env
          readOnly: true
                  
      volumes:
        - name: env-config
          secret:
            secretName: env-config
