manifests/mongo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddp-mongo
  labels:
    app: ddp-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddp-mongo
  template:
    metadata:
      labels:
        app: ddp-mongo
    spec:
      containers:
      - name: ddp-mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
