manifests/app.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddp-api-svc
spec:
  type: NodePort
  selector:
    app: ddp-api
  ports:
    - protocol: TCP
      port: 8900
      targetPort: 8900
      nodePort: 8900
